force-app/main/default/objects/Forecast__c/Forecast__c.object-meta.xml
<CustomObject>
    <label>Billing Forecast</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Billing Forecast Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Billing Forecasts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>