force-app/main/default/objects/Forecast__c/fields/Account_Executive_Count__c.field-meta.xml
<CustomField>
    <fullName>Account_Executive_Count__c</fullName>
    <label>Account Executive Count</label>
    <summaryFilterItems>
        <field>Account_Executive_Revenue__c.IsActive__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Account_Executive_Revenue__c.Billing_Forecast__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>