force-app/main/default/objects/Forecast__c/fields/AE1_Bonus__c.field-meta.xml
<CustomField>
    <fullName>AE1_Bonus__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AE1 Bonus</label>
    <referenceTo>AE_Bonus__c</referenceTo>
    <relationshipLabel>Billing Forecasts</relationshipLabel>
    <relationshipName>Billing_Forecasts</relationshipName>
    <type>Lookup</type>
</CustomField>