force-app/main/default/objects/Forecast__c/fields/AE1_Forecast_Split_Amount__c.field-meta.xml
<CustomField>
    <fullName>AE1_Forecast_Split_Amount__c</fullName>
    <formula>Forecast_Split_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AE1 Forecast Split Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>