force-app/main/default/objects/Forecast__c/fields/AE1_Name__c.field-meta.xml
<CustomField>
    <fullName>AE1_Name__c</fullName>
    <formula>AE1_Bonus__r.AE_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AE1 Name</label>
    <type>Text</type>
</CustomField>