force-app/main/default/objects/Forecast__c/fields/AE2_Bonus__c.field-meta.xml
<CustomField>
    <fullName>AE2_Bonus__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AE2_Bonus</label>
    <referenceTo>AE_Bonus__c</referenceTo>
    <relationshipLabel>Billing Forecasts (AE 2 Bonus)</relationshipLabel>
    <relationshipName>Billing_Forecasts1</relationshipName>
    <type>Lookup</type>
</CustomField>