force-app/main/default/objects/Forecast__c/fields/AE2_Forecast_Split_Amount__c.field-meta.xml
<CustomField>
    <fullName>AE2_Forecast_Split_Amount__c</fullName>
    <description>This is to calculate the split amount for AE2</description>
    <formula>Revenue_Amount__c  - Forecast_Split_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AE2 Forecast Split Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>