force-app/main/default/objects/Forecast__c/fields/Forecast_Amt_MTD_Billed__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Amt_MTD_Billed__c</fullName>
    <formula>0 /*Revenue_Amount__c  -  ATI_Job__r.Month_to_Date_Work_Billed__c */</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Forecast Amt - MTD Billed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>