force-app/main/default/objects/Forecast__c/fields/Forecast_Job_Estimate_Amount__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Job_Estimate_Amount__c</fullName>
    <formula>ATI_Job__r.Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estimate Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>