force-app/main/default/objects/Forecast__c/fields/Forecast_Job_Name__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Job_Name__c</fullName>
    <formula>ATI_Job__r.Job_Name__c</formula>
    <label>Job Name</label>
    <type>Text</type>
</CustomField>