force-app/main/default/objects/Forecast__c/fields/Forecast_Job_PM__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Job_PM__c</fullName>
    <formula>ATI_Job__r.Project_Manager__r.FirstName  &amp; &quot; &quot;  &amp;  ATI_Job__r.Project_Manager__r.LastName</formula>
    <label>Project Manager</label>
    <type>Text</type>
</CustomField>