force-app/main/default/objects/Forecast__c/fields/Forecast_Job_Status__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Job_Status__c</fullName>
    <formula>TEXT(ATI_Job__r.Stage__c)</formula>
    <label>Stage</label>
    <type>Text</type>
</CustomField>