force-app/main/default/objects/Forecast__c/fields/Forecast_Quarter__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Quarter__c</fullName>
    <formula>CEILING( MONTH ( Invoice_Date__c ) / 3 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Forecast Quarter</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>