force-app/main/default/objects/Forecast__c/fields/Forecast_Split_Amount__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Split_Amount__c</fullName>
    <formula>if(  ATI_Job__r.Account_Executive_2__c=&quot;&quot;, Revenue_Amount__c, Revenue_Amount__c/2 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Forecast Split Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>