force-app/main/default/objects/Forecast__c/fields/Forecast_Year__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Year__c</fullName>
    <formula>TEXT(YEAR(  Invoice_Date__c  ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Forecast Year</label>
    <type>Text</type>
</CustomField>