force-app/main/default/objects/Forecast__c/fields/Invoice_Date__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Date__c</fullName>
    <label>Forecast Date</label>
    <type>Date</type>
</CustomField>