force-app/main/default/objects/Forecast__c/fields/Job_PM_is_Current_User__c.field-meta.xml
<CustomField>
    <fullName>Job_PM_is_Current_User__c</fullName>
    <formula>IF((Forecast_Job_PM__c =  $User.FirstName+&apos; &apos;+ $User.LastName),1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Job PM is Current User</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>