force-app/main/default/objects/Forecast__c/fields/Job_Type__c.field-meta.xml
<CustomField>
    <fullName>Job_Type__c</fullName>
    <description>Deleted After checking</description>
    <formula>ATI_Job__r.Job_Type__c</formula>
    <label>Job Type</label>
    <type>Text</type>
</CustomField>