force-app/main/default/objects/Forecast__c/fields/Split_Percent__c.field-meta.xml
<CustomField>
    <fullName>Split_Percent__c</fullName>
    <formula>IF( AND( ( AE1_Bonus__c != &apos;&apos;),( AE2_Bonus__c != &apos;&apos;)), 
0.5, 
IF( 
OR( 
AND(( AE1_Bonus__c == &apos;&apos; ), ( AE2_Bonus__c != &apos;&apos;)), 
AND(( AE1_Bonus__c != &apos;&apos;), ( AE2_Bonus__c == &apos;&apos;))), 
1, 
0) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Split Percent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>