force-app/main/default/objects/Forecast__c/fields/Total_Forecast_Split_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Forecast_Split_Amount__c</fullName>
    <formula>AE1_Forecast_Split_Amount__c +  AE2_Forecast_Split_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Forecast Split Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>