force-app/main/default/objects/Forecast__c/validationRules/Do_Not_Allow_Forecast_Dates_after_Close.validationRule-meta.xml
<ValidationRule>
    <fullName>Do_Not_Allow_Forecast_Dates_after_Close</fullName>
    <active>true</active>
    <description>Forecasts can only be created/edited if the previous and/or current Forecast Date is later than the Forecast Close Date (which is set by Accounting in Custom Settings). Changes to AE assignments for jobs/forecasts are always allowed.</description>
    <errorConditionFormula>AND(

	OR(
	PRIORVALUE(Invoice_Date__c) &lt;= $Setup.Forecast_Settings__c.Forecast_Close_Date__c, Invoice_Date__c &lt;= $Setup.Forecast_Settings__c.Forecast_Close_Date__c 
	), 

	NOT($Profile.Name = &quot;System Administrator&quot;), 
        NOT($User.Username = &quot;richard.devos@atirestoration.com&quot;),

	OR(
	ISNEW(), ISCHANGED(Invoice_Date__c), ISCHANGED(Revenue_Amount__c), ISCHANGED(Opportunity__c) 
	) 

)</errorConditionFormula>
    <errorDisplayField>AE1_Bonus__c</errorDisplayField>
    <errorMessage>Forecasts can only be created/edited if the previous and/or current Forecast Date is later than the Forecast Close Date. Please contact accounting with any questions.</errorMessage>
</ValidationRule>