force-app/main/default/objects/Forecast__c/listViews/My_Forecasts_prev_and_current_months.listView-meta.xml
<ListView>
    <fullName>My_Forecasts_prev_and_current_months</fullName>
    <booleanFilter>1 AND (2 OR 3)</booleanFilter>
    <columns>Forecast_Job_Name__c</columns>
    <columns>Forecast_Job_Estimate_Amount__c</columns>
    <columns>Invoice_Date__c</columns>
    <columns>Revenue_Amount__c</columns>
    <columns>Forecast_Job_Status__c</columns>
    <columns>Forecast_Job_PM__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Job_PM_is_Current_User__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Invoice_Date__c</field>
        <operation>equals</operation>
        <value>LAST_MONTH</value>
    </filters>
    <filters>
        <field>Invoice_Date__c</field>
        <operation>equals</operation>
        <value>THIS_MONTH</value>
    </filters>
    <label>My Forecasts - prev and current months</label>
    <sharedTo>
        <role>Chicago_Branch</role>
        <role>Corporate_Office</role>
        <role>Dallas_Branch</role>
        <role>Las_Vegas_Branch</role>
        <role>Los_Angeles_Branch</role>
        <role>New_England_Branch</role>
        <role>Phoenix_Branch</role>
        <role>Project_Directors_HQ_Env</role>
        <role>Project_Managers_Chicago</role>
        <role>Project_Managers_Corporate</role>
        <role>Project_Managers_Dallas</role>
        <role>Project_Managers_Las_Vegas</role>
        <role>Project_Managers_Los_Angeles</role>
        <role>Project_Managers_New_England</role>
        <role>Project_Managers_Phoenix</role>
        <role>Project_Managers_Riverside</role>
        <role>Project_Managers_Sacramento</role>
        <role>Project_Managers_San_Diego</role>
        <role>Project_Managers_San_Francisco</role>
        <role>Project_Managers_San_Jose</role>
        <role>Project_Managers_Tucson</role>
        <role>Riverside_Branch</role>
        <role>Sacramento_Branch</role>
        <role>San_Diego_Branch</role>
        <role>San_Francisco_Branch</role>
        <role>San_Jose_Branch</role>
        <role>Sr_VP_Health_Env_Svc</role>
        <role>Tucson_Branch</role>
    </sharedTo>
</ListView>